<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/ic_bell"
        android:title="@string/navigation_notification"/>

    <item
        android:id="@+id/menu_schedule"
        android:icon="@drawable/ic_schedule"

        android:title="@string/navigation_schedule"/>
    <item
        android:id="@+id/menu_form"
        android:icon="@drawable/ic_form"
        android:title="@string/navigation_application"/>
    <item
        android:id="@+id/menu_sign"
        android:icon="@drawable/ic_pen"
        android:title="@string/navigation_sign"/>
    <item
        android:id="@+id/menu_me"
        android:icon="@drawable/ic_me"
        android:title="@string/navigation_me"/>
</menu>